# openenv-supply-chain

./: .gitignore  Dockerfile  README.md  README_HF.md  __init__.py  client.py  generate_tasks.py  inference.py  models.py  openenv.yaml  pyproject.toml  results.json  results_log.txt  validate.py
docs/: visualizer.html
openenv_supply_chain_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/: Dockerfile  __init__.py  app.py  requirements.txt  supply_chain_env_environment.py
server/tests/: test_environment.py
supply_chain_env/: generate_tasks.py  models.py
supply_chain_env/server/: Dockerfile  app.py  supply_chain_env_environment.py
tests/: test_environment.py
