# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-supply-chain-env"
version = "4.0.0"
description = "Supply Chain Disruption Environment for OpenEnv — multi-step tool-use RL with layered rewards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
keywords = ["openenv", "reinforcement-learning", "supply-chain", "tool-use", "rl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # OpenEnv core runtime
    "openenv-core[core]>=0.2.2",
    # Server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    # Client / inference
    "requests>=2.31.0",
    "openai>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
# Run server directly: uv run server  OR  python -m supply_chain_env.server.app
server = "supply_chain_env.server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Auto-discover supply_chain_env and supply_chain_env.server
where = ["."]
include = ["supply_chain_env*", "server*"]

[tool.setuptools.package-dir]
# Root package maps to current directory
"supply_chain_env" = "."
"supply_chain_env.server" = "server"

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "*.md", "*.json", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"